# chord-transposer-haskell

./: .gitignore  ChordParser.hs  LineSplitter.hs  Main.hs  Notes.hs  Player.hs  README.md  Readme.txt  Transposer.hs  Utils.hs  Voicer.hs  chord-sheet-transposer.cabal  todo.txt
docs/: LICENSE  notes.txt  testchords  todo.txt
inputs/: allchords.txt  lullaby_of_birdland.txt  simple  washing_of_the_water_chords_c.txt
src/: ChordParser.hs  LineSplitter.hs  Main.hs  Notes.hs  Transposer.hs  TypePlay.hs  Utils.hs
testdata/: abide_with_me_chords_c.txt  amazing_grace.txt  chordset_samba_em_preludio.txt  i_ll_fly_away.txt  lullaby_of_birdland.txt  lullaby_of_birdland.txt.transposed-plus3.expected  samba_em_preludio.txt  simple  testchords
