name:                chord-sheet-transposer
version:             0.1.0.0
synopsis:            Transposer for informal chord-and-lyric sheets
description:         Parses and modifies informal lyric + chord sheets allowing transposition and analysis.
homepage:            https://github.com/nbogie/chord-transposer-haskell
license:             MIT
license-file:        docs/LICENSE
author:              neillbogie@googlemail.com
maintainer:          example@example.com
copyright:           2011 Neill Bogie
category:            Music Notation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/nbogie/chord-transposer-haskell#readme>

library
  hs-source-dirs:      src
  exposed-modules:     ChordParser, Transposer, LineSplitter, Notes, Utils
  build-depends:       base >= 4.7 && < 5
                        , parsec >= 3.1.2
                        , HUnit >= 1.2.0.0
                        , bytestring >= 0.9.1.7
                        , containers >= 0.4.2.0
  ghc-options:         -Wall -Werror  
  default-language:    Haskell2010

executable chord-sheet-transposer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cmdargs >= 0.6
                     , chord-sheet-transposer
  default-language:    Haskell2010

test-suite chord-sheet-transposer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chord-sheet-transposer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/nbogie/chord-transposer-haskell.git
